--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FreeFolio - Freelancer Portfolio</title>
+    <title>Abdullah Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Matrix Infotech Solutions" name="keywords">
     <meta content="Matrix Infotech Solutions" name="description">
